@@ -4,6 +4,7 @@ Changes in 1.1.1:
 =================
 Bugs:
 - 1596171: Fixed incorrect timeout assertion when system clock changes
+- 1604433: Fixed memory leaks
 
 Changes in 1.1.0:
 =================
