@@ -1,3 +1,9 @@
+2006-11-28  Viktor Mihajlovski  <mihajlov@dyn-9-152-143-50.boeblingen.de.ibm.com>
+
+	* cimXmlParser.c, cimXmlResp.y, client.c: 
+	Fixed 1604433: memory leaks for instance array properties and out
+	args.
+
 2006-11-14  Viktor Mihajlovski  <mihajlov@dyn-9-152-143-50.boeblingen.de.ibm.com>
 
 	* client.c: 
